--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "webpack": "^1.12.14"
+  },
+  "dependencies": {
+    "jquery": "^2.2.2",
+    "marked": "^0.3.5"
   }
 }
