--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint",
+    "lint": "eslint src/**/*.js",
     "webpack": "webpack -w",
     "start": "concurrent \"npm run webpack\" \"npm run lite\""
   },
